Fix the issue that some possible source formats are ignored for float textures in texture packing for CG port https://bugs.webkit.org/show_bug.cgi?id=108812

Patch by Jun Jiang <jun.a.jiang@intel.com> on 2013-02-04
Reviewed by Kenneth Russell.

Already covered by latest WebGL conformance test.

* platform/graphics/GraphicsContext3D.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/127102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141843 268f45cc-cd09-0410-ab3c-d52691b4dbfc